<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgapps2"
    tools:context=".Shipping.DetailBaju1">


    <ImageView
        android:layout_width="47dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/leftarrow"
        app:layout_constraintBottom_toTopOf="@id/detailbju1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/detailbju1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bju11"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jdulItem"
        android:text="@string/kaos_polos"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:textSize="35dp"
        android:layout_marginLeft="@dimen/for25dp"
        app:layout_constraintTop_toBottomOf="@id/detailbju1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp_70_000"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/for5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailbju1"
        app:layout_constraintStart_toEndOf="@id/jdulItem"
        android:layout_marginStart="35dp"
        />


    <LinearLayout
        android:id="@+id/linelayoutdetailbju1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/jdulItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abu_abu_xl"
            android:textSize="25sp"
            android:layout_marginLeft="@dimen/for25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/for25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bahan Katun dengan serat fiber optik"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/for25dp"
            />



    </LinearLayout>

    <Button
        android:id="@+id/btntoLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Buttoneuy"
        android:gravity="center"
        android:text="Masuk Ke Toko"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linelayoutdetailbju1" />


</androidx.constraintlayout.widget.ConstraintLayout>